# SciencePlots-plotly

./: MANIFEST.in  README.md  pyproject.toml
examples/: plot-examples.py
examples/figures/plotly/: fig01a.html  fig02a.html  fig02c.html  fig04.html  fig06.html  fig10.html  fig14a.html  fig16.html  fig17.html  fig_dr_1.html  fig_dr_10.html  fig_dr_11.html  fig_dr_12.html  fig_dr_13.html  fig_dr_14.html  fig_dr_15.html  fig_dr_16.html  fig_dr_17.html  fig_dr_18.html  fig_dr_19.html  fig_dr_2.html  fig_dr_20.html  fig_dr_21.html  fig_dr_22.html  fig_dr_23.html  fig_dr_3.html  fig_dr_4.html  fig_dr_5.html  fig_dr_6.html  fig_dr_7.html  fig_dr_8.html  fig_dr_9.html
src/scienceplots/: __init__.py  templates_discovery.py
src/scienceplots/templates/: notebook.json  scatter.json  science.json
src/scienceplots/templates/color/: bright.json  high-contrast.json  high-vis.json  light.json  muted.json  retro.json  std-colors.json  vibrant.json
src/scienceplots/templates/color/discrete-rainbow/: discrete-rainbow-1.json  discrete-rainbow-10.json  discrete-rainbow-11.json  discrete-rainbow-12.json  discrete-rainbow-13.json  discrete-rainbow-14.json  discrete-rainbow-15.json  discrete-rainbow-16.json  discrete-rainbow-17.json  discrete-rainbow-18.json  discrete-rainbow-19.json  discrete-rainbow-2.json  discrete-rainbow-20.json  discrete-rainbow-21.json  (+9 more)
src/scienceplots/templates/journals/: ieee.json  nature.json
src/scienceplots/templates/languages/: cjk-jp-font.json  cjk-kr-font.json  cjk-sc-font.json  cjk-tc-font.json  russian-font.json
src/scienceplots/templates/misc/: grid.json  latex-sans.json  no-latex.json  pgf.json
src/scienceplots/tests/: conftest.py  test_scienceplots.py
