[build-system]
requires = ["setuptools>=77", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "SciencePlots"
authors = [{ name = "John Garrett", email = "garrettj403@gmail.com" }]
maintainers = [{ name = "Echedey Luis", email = "echelual@gmail.com" }]
description = "Plotly templates for scientific figures"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]

keywords = [
    "plotly-templates",
    "plotly-figures",
    "scientific-papers",
    "thesis-template",
    "plotly-styles",
    "python",
]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]

dynamic = ["version"]

requires-python = ">=3.8"
dependencies = ["plotly"]

[project.optional-dependencies]
test = ["pytest", "numpy"]
all = ["SciencePlots[test]"]

[project.urls]
Homepage = "https://github.com/nwpulverizer/SciencePlots-plotly"
Documentation = "https://github.com/nwpulverizer/SciencePlots-plotly#readme"
Repository = "https://github.com/nwpulverizer/SciencePlots-plotly"
Issues = "https://github.com/nwpulverizer/SciencePlots-plotly/issues"
Changelog = "https://github.com/nwpulverizer/SciencePlots-plotly/blob/master/CHANGES.md"

[tool.setuptools_scm]
# blank section to avoid warning

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["src/scienceplots/tests"]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Exclude annotations and type comments
lint.ignore = ["ANN"]
